limited length of display to avoid overflow

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
   padding: 5px;
 }
 
-
 .result {
   display: flex;
   flex-direction: column;
@@ -24,23 +23,37 @@ body {
   justify-content: end;
   align-items: end;
   height: 20%;
-  /* border: 2px solid rgb(101, 124, 101); */
   background-color: black;
   border-radius: 10px;
+  flex: 1;
+}
+
+.previousResult {
+  display: flex;
+  align-items: end;
+  height: 50%;
+  padding-bottom: 3px;
+  padding-right: 10px;
+  font-size: 20px;
+  color: rgb(101, 124, 101);
+}
+
+.currentResult {
+  display: flex;
+  height: 50%;
+  padding-right: 10px;
+  font-size: 40px;
+  color: rgb(35, 150, 35);
+  flex: 1;
 }
 
 .inputs {
   display: flex;
   flex-direction: column;
-  flex: 1;
   height: 69%;
   background-color: rgb(111, 223, 130);
   gap: 5px;
   margin-top: 5px;
-}
-
-.inputs button {
-  width: 25%;
 }
 
 .rowZero, .rowOne, .rowTwo, .rowThree, .rowFour {
@@ -50,6 +63,7 @@ body {
 }
 
 button {
+  width: 25%;
   font-size: 20px;
   font-weight: bold;
   border-radius: 20px;
@@ -65,23 +79,6 @@ button {
 
 .previousResult, .currentResult{
   margin: 0;
-}
-
-.previousResult {
-  display: flex;
-  align-items: end;
-  height: 50%;
-  padding-bottom: 3px;
-  padding-right: 10px;
-  font-size: 20px;
-  color: rgb(101, 124, 101);
-}
-
-.currentResult {
-  height: 50%;
-  padding-right: 10px;
-  font-size: 50px;
-  color: rgb(35, 150, 35);
 }
 
 button.mainPad {
